--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,33 +1,17 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <b>Provider:</b>
-  <%= @player.provider %>
-</p>
-
-<p>
-  <b>Uid:</b>
-  <%= @player.uid %>
-</p>
-
 <p>
   <b>Name:</b>
   <%= @player.name %>
 </p>
 
 <p>
-  <b>Provider email:</b>
+  <b>Email:</b>
   <%= @player.provider_email %>
 </p>
 
 <p>
-  <b>Oauth token:</b>
-  <%= @player.oauth_token %>
-</p>
-
-<p>
-  <b>Oauth secret:</b>
-  <%= @player.oauth_secret %>
+  <b>Profile:</b>
+  <%= @player.profile%>
 </p>
 
 
