--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -10,15 +10,6 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :provider %><br />
-    <%= f.text_field :provider %>
-  </div>
-  <div class="field">
-    <%= f.label :uid %><br />
-    <%= f.text_field :uid %>
-  </div>
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
@@ -28,12 +19,8 @@
     <%= f.text_field :provider_email %>
   </div>
   <div class="field">
-    <%= f.label :oauth_token %><br />
-    <%= f.text_field :oauth_token %>
-  </div>
-  <div class="field">
-    <%= f.label :oauth_secret %><br />
-    <%= f.text_field :oauth_secret %>
+    <%= f.label :profile %><br />
+    <%= f.text_area :profile %>
   </div>
   <div class="actions">
     <%= f.submit %>
